--- a/module_perturbation_clean.Rmd
+++ b/module_perturbation_clean.Rmd
@@ -459,3 +459,198 @@ dev.off()
 
 
 ```
+
+
+Example 3: Downregulation of module MG-M2
+
+```{r eval=FALSE}
+
+# options:
+perturbation_name = 'M2_down'
+seurat_obj = seurat_mg
+mod = 'MG-M2'
+wgcna_name <- 'MG'
+n_hubs <- 10
+perturb_dir <- -1
+n_iters=3
+
+# run a knock-in of the top 10 hub genes from MG-M2
+# should take 2-3 min to run
+seurat_mg <- ModulePerturbation(
+    seurat_mg, 
+    mod = mod,
+    perturb_dir = perturb_dir,
+    n_hubs=n_hubs,
+    perturbation_name = perturbation_name,
+    graph = 'RNA_nn',
+    wgcna_name = wgcna_name
+)
+
+#-------------------------------------------------------------------------#
+# Plotting the result as a vector field plot on top of the UMAP
+# (need to make this into proprer functions later)
+#-------------------------------------------------------------------------#
+
+# This function gives us the dataframe with vector coordinates 
+# (ars) and vector distances (arsd)
+vectors <- PerturbationVectors(
+  seurat_mg,
+  perturbation_name = perturbation_name
+)
+ars <- vectors$ars 
+arsd <- vectors$arsd
+
+# Get the UMAP embedding from the seurat object 
+# and subset to only keep cells that we have arrows for.
+emb <- seurat_mg@reductions$umap@cell.embeddings
+emb <- emb[rownames(ars),]
+
+# run the velociraptor function to make a grid of arrows instead of one 
+# arrow per cell
+grid.df <- velociraptor::gridVectors(emb, arsd)
+
+
+# compute the length of each arrow 
+distances <- sqrt(
+  ((grid.df$end.xd - grid.df$start.UMAP_1)^2) - 
+  ((grid.df$end.yd - grid.df$start.UMAP_2)^2) 
+)
+distances <- ifelse(is.nan(distances), 0, distances)
+grid.df$length <- distances
+
+# make a dataframe to plot with ggplot
+plot_df <- as.data.frame(emb)
+plot_df$pseudotime <- seurat_mg@meta.data[rownames(emb), 'pseudotime']
+
+# plot the scatter plot
+p <- ggplot(plot_df, aes(x=UMAP_1, y=UMAP_2, color=pseudotime)) +
+  geom_point(alpha=0.25, size=2) +
+  scale_color_gradientn(colors=plasma(256))
+  
+# add the arrows
+p <- p +
+  geom_segment(
+    data = grid.df,
+    inherit.aes=FALSE,
+    aes(
+      x=start.UMAP_1, 
+      y=start.UMAP_2, 
+      xend=end.xd, 
+      yend=end.yd,
+      alpha= length
+    ), 
+    arrow=grid::arrow(length=unit(0.1, "cm")), size=0.25
+  ) +
+  scale_alpha_continuous(range=c(0.8,1)) +
+  coord_equal() +
+  umap_theme() +
+  NoLegend() +
+  ggtitle(paste0(mod))
+
+pdf(paste0(fig_dir, 'vectorfield_', perturbation_name, '.pdf'), width=6, height=3)
+p
+dev.off()
+
+#-------------------------------------------------------------------------#
+# Plotting the kME vs Delta
+#-------------------------------------------------------------------------#
+
+# get the kME for all the genes in module M4
+hubs <- GetHubGenes(seurat_mg, n_hubs=Inf) %>% 
+  subset(module == mod)
+hub_genes <- hubs %>% slice_max(kME, n=10) %>% .$gene_name
+hubs$hub <- ifelse(hubs$gene_name %in% hub_genes, 'hub', 'other')
+
+# get the observed and perturbed expression matrices and compute the deltas
+X <- GetAssayData(seurat_mg, assay='RNA', slot='counts')[hubs$gene_name,]
+X_norm <- GetAssayData(seurat_mg, assay='RNA', slot='data')[hubs$gene_name,]
+X_per <- GetAssayData(seurat_mg, assay=perturbation_name, slot='counts')[hubs$gene_name,]
+delta <- X_per - X
+
+# compute the average observed expression for each gene:
+avg_exp <- rowSums(X_norm) / ncol(X_norm)
+
+# compute the mean delta value for each gene across all the cells:
+plot_df <- reshape2::melt(as.matrix(delta)) 
+plot_df <- plot_df%>% 
+  group_by(Var1) %>% 
+  summarise(delta = mean(value)) %>%
+  dplyr::rename(gene_name = Var1)
+
+# join this df with the kME df
+plot_df <- dplyr::left_join(
+  x = plot_df,
+  y = hubs,
+  by = 'gene_name'
+)
+
+# add col for avg exp 
+plot_df$avg_exp <- avg_exp
+
+# only label hub genes
+plot_df$label <- ifelse(plot_df$hub == 'hub', plot_df$gene_name, '')
+
+# plot with ggplot
+p1 <- plot_df %>% 
+  ggplot(aes(x = delta, y = kME, color = hub, size=avg_exp)) + 
+  geom_point() + 
+  geom_smooth(
+    data = plot_df, inherit.aes = FALSE,
+    aes(x=delta, y=kME),
+    method = 'lm',
+    color = 'black'
+    ) + 
+    ggpubr::stat_cor(
+      data = plot_df, inherit.aes = FALSE,
+    aes(x=delta, y=kME)
+    ) + 
+    geom_label_repel(
+      label=plot_df$label, 
+      max.overlaps=Inf,
+      color='black',
+      size=3
+    ) +
+    theme(
+      axis.line.x = element_blank(),
+      axis.line.y = element_blank(),
+      panel.border = element_rect(color='black', fill=NA, linewidth=1),
+      panel.grid.major = element_line(linewidth=0.25, color='lightgrey')
+    ) + 
+    xlab(bquote("Perturbation delta")) +
+    ylab('kME') + labs(color="")
+
+# Similar plot but delta vs average expression in observed
+p2 <- plot_df %>% 
+  ggplot(aes(x = delta, y = avg_exp, color = hub, size=kME)) + 
+  geom_point() + 
+  geom_smooth(
+    data = plot_df, inherit.aes = FALSE,
+    aes(x=delta, y=kME),
+    method = 'lm',
+    color = 'black'
+    ) +  
+    ggpubr::stat_cor(
+      data = plot_df, inherit.aes = FALSE,
+      aes(x=delta, y=avg_exp)
+    ) + 
+    geom_label_repel(
+      label=plot_df$label, 
+      max.overlaps=Inf,
+      color='black',
+      size=3
+    ) +
+    theme(
+      axis.line.x = element_blank(),
+      axis.line.y = element_blank(),
+      panel.border = element_rect(color='black', fill=NA, linewidth=1),
+      panel.grid.major = element_line(linewidth=0.25, color='lightgrey')
+    ) + 
+    xlab(bquote("Perturbation delta")) +
+    ylab('Average Expression') + labs(color="")
+
+pdf(paste0(fig_dir, 'kME_delta_', perturbation_name,'.pdf'), width=12, height=4)
+p1 + p2
+dev.off()
+
+
+```
